# romitask

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
conda/env/: romitask.yaml
conda/recipe/: meta.yaml
docs/: index.md
docs/api/: modules.md  runner.md  task.md  watch.md
docs/cli/: print_task_info.md  romi_run_task.md
docs/examples/: print_task_info.md  romi_run_task.md
romitask/: modules.py  task.py  watch.py
src/romitask/: __init__.py  log.py  modules.py  runner.py  task.py  watch.py
src/romitask/cli/: print_task_info.py  romi_run_task.py
