[tool.poetry]
name = "romitask"
version = "0.1.0"
description = "A romi task runner"
authors = ["Nabil Ait Taleb <mohamednabil.aittaleb@sony.com>", "Jonathan LEGRAND <jonathan.legrand@ens-lyon.fr>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
homepage = "https://docs.romi-project.eu/documentation/"
repository = "https://github.com/romi/romitask"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)"
]

[tool.poetry.dependencies]
python = "^3.6"
luigi = "^3.0.3"
toml = "^0.10.2"
watchdog = "^2.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
romi_run_task = "romitask.bin.romi_run_task:run"
print_task_info = "romitask.bin.print_task_info:run"